--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -219,18 +219,22 @@
     }
 
     h3 {
-        font-size: 26px;
+        // font-size: 26px;
+        font-size: 24px;
 
         @include media-query($on-laptop) {
+            // font-size: 22px;
             font-size: 22px;
         }
     }
 
     h4 {
-        font-size: 20px;
+        // font-size: 20px;
+        font-size: 18px;
 
         @include media-query($on-laptop) {
-            font-size: 18px;
+            // font-size: 18px;
+            font-size: 1px;
         }
     }
 }
